# system-properties

./: Cargo.toml  README.md
system-properties/: Cargo.toml
system-properties-bindgen/: Cargo.toml  build.rs
system-properties/src/: lib.rs  system_properties.rs
system-properties/src/system_properties/: error.rs  parsers_formatters.rs
