[package]
name = "system-properties"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
libc = "0.2"
system-properties-bindgen = { path = "../system-properties-bindgen" }
thiserror = "1"
